style.css
:root {
  --purple: #9a315d;
  --off-white: #ddbbca;
  --off-white-dark: #e2e0d8;
  --white: #ffffff;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  background-color: var(--off-white);
  height: 100vh;
  width: 100vw;
  overflow: hidden;
  font-family: "Anton", sans-serif;
  position: relative;
}
.logo-container {
  position: absolute;
  top: 1rem;
  left: 50%;
  transform: translateX(-50%) scale(2);
  z-index: 1000;
}
.logo {
  width: clamp(100px, 8vw, 150px);
  transition: width 0.3s ease;
}
.hero {
  position: relative;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
  padding-top: 5rem;
}
.hero-heading {
  font-size: 11.2rem;
  color: var(--purple);
  text-align: center;
}
.inverse {
  color: var(--off-white-dark);
}
.hero-subheading {
  margin: -3rem 0 2rem 0;
  font-size: 1.5rem;
  font-family: "Shadows Into Light";
  text-align: center;
  width: 80%;
  color: #333;
}
.phone-container {
  position: relative;
  width: clamp(400px, 60%, 500px);
  margin: 0.01rem auto;
  transition: width 0.3s ease;
}
.phone-image {
  display: block;
  width: 100%;
  height: auto;
}
.screen-overlay {
  position: absolute;
  top: 15%;
  left: 50%;
  transform: translateX(-50%);
  width: 75%;
}
.phone-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.input-row {
  display: flex;
  flex-direction: column;
  gap: 0.3rem;
}
.input-row label {
  font-size: 1rem;
  color: #fff;
  font-family: "SF Pro", sans-serif;
}
.input-row input {
  width: 100%;
  padding: 0.5rem 1rem;
  font-size: 1rem;
  border: 1px solid #fff;
  border-radius: 8px;
  background-color: transparent;
  color: #fff;
  outline: none;
  font-family: "SF Pro", sans-serif;
}
.input-row input::placeholder {
  color: #cccccca4;
}
.submit-button {
  display: block;
  width: 3rem;
  height: 3rem;
  margin: 0 auto;
  margin-top: 20px;
  background: url("./img/unity-form-presubmission-button.png") no-repeat
    center/contain;
  border: none;
  cursor: pointer;
  transform: scale(1.5);
  transition: background-image 0.3s ease;
}
.form-confirmation {
  font-size: 1.5rem;
  font-family: "SF Pro Display";
  src: url(./fonts/sf-pro-display/SFPRODISPLAYREGULAR.OTF) format("woff");
  font-weight: 100;
  color: var(--white);
  margin-top: 2rem;
  text-align: center;
}

.copyright {
  position: absolute;
  bottom: 0.5rem;
  left: 50%;
  transform: translateX(-50%);
  font-family: "Source Sans Pro", sans-serif;
  font-size: 0.9rem;
  color: var(--off-white);
  text-align: center;
  opacity: 0.8;
}

@media (max-width: 685px) {
  .hero-heading {
    font-size: 8rem;
  }
  .hero-subheading {
    font-size: 1.5rem;
    margin: -2rem 0 1rem 0;
  }
  .phone-container {
    width: 400px;
  }
  .logo {
    width: clamp(100px, 8vw, 150px);
  }
}

